# MMD

./: .gitignore
spiral/: CMakeLists.txt  ImageViewer.cpp  ImageViewer.hpp  ImageWidget.cpp  ImageWidget.hpp  MainWindow.cpp  MainWindow.hpp  Spiralify.cpp  Spiralify.hpp  main.cpp
